<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/blackish" >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/github_icon_white"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/github_logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github_users"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginStart="25dp"/>
    </androidx.appcompat.widget.Toolbar>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_light">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detail_pp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            tools:src="@tools:sample/avatars"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/example_name"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@id/detail_pp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/detail_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/example_name"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@id/detail_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/detail_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/exam_bio"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/detail_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <LinearLayout
            android:id="@+id/follows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/detail_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/detail_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/followers_black"
                android:drawablePadding="3dp"
                tools:text="@string/exam_followers"
                android:textSize="10sp"
                android:textColor="@color/black"
                tools:ignore="SmallSp,UseCompatTextViewDrawableXml" />
            <TextView
                android:id="@+id/detail_followings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/followings_black"
                tools:text="@string/exam_followings"
                android:drawablePadding="3dp"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                tools:ignore="SmallSp,UseCompatTextViewDrawableXml" />
        </LinearLayout>
        <TextView
            android:id="@+id/detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/location_black"
            tools:text="@string/exam_location"
            android:drawablePadding="3dp"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/follows"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SmallSp,UseCompatTextViewDrawableXml" />

        <LinearLayout
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detail_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <Button
                android:id="@+id/kunjungi"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/kunjungi_github"
                android:textSize="13sp"
                android:textAllCaps="false"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/favorite"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tambah_favorit"
                android:textSize="13sp"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/detail_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_light"
        app:tabTextColor="@android:color/black"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>