<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textSize="14sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@id/photo_profile"
            card_view:layout_constraintTop_toTopOf="@id/photo_profile"
            tools:text="@string/example_name" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textSize="10sp"
            card_view:layout_constraintStart_toEndOf="@id/photo_profile"
            card_view:layout_constraintTop_toBottomOf="@id/profile_name"
            tools:text="@string/example_name"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/exam_followers"
            android:textSize="10sp"
            android:drawablePadding="3dp"
            android:layout_marginTop="15dp"
            card_view:drawableLeftCompat="@drawable/followers_black"
            card_view:layout_constraintTop_toBottomOf="@id/username"
            card_view:layout_constraintStart_toStartOf="@id/username"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/hyphen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/hyphen"
            android:textSize="10sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            card_view:layout_constraintStart_toEndOf="@id/followers"
            card_view:layout_constraintTop_toTopOf="@id/followers"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/followings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/exam_followings"
            android:textSize="10sp"
            android:drawablePadding="3dp"
            card_view:drawableLeftCompat="@drawable/followings_black"
            card_view:layout_constraintStart_toEndOf="@id/hyphen"
            card_view:layout_constraintTop_toTopOf="@id/hyphen"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/exam_location"
            android:textSize="10sp"
            android:drawablePadding="3dp"
            android:layout_marginTop="8dp"
            card_view:drawableLeftCompat="@drawable/location_black"
            card_view:layout_constraintStart_toStartOf="@id/followers"
            card_view:layout_constraintTop_toBottomOf="@id/followers"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>